# parallelism

task1/: CMakeLists.txt  Readme.md  main.cpp
task2/: integral.cpp  main.cpp  matrix.cpp
task2/task2_1/: CMakeLists.txt  task1_matrix_vector.cpp
task2/task2_2/: CMakeLists.txt  task2_integrate_omp.cpp
task2/task2_3/: CMakeLists.txt  Var_A.cpp  Var_B.cpp
task2/task2_3.2/: Var_A.cpp  Var_B.cpp
task3/: main.cpp
